list events, skills, dependant skills and liturgies
