# backend/internal/models/events.sql.go
@@ -1,0 +1,45 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.29.0
+// source: events.sql
+
+package db
+
+import (
+	"context"
+)
+
+const getEvents = `-- name: GetEvents :many
+SELECT DISTINCT
+    e.id, event_name
+FROM deacons.deacons.events e join deacons.deacons.event_skill_liturgy esl on e.id = esl.event_id
+Where esl.liturgy_id = $1
+`
+
+type GetEventsRow struct {
+	ID        int32
+	EventName string
+}
+
+func (q *Queries) GetEvents(ctx context.Context, liturgyID int32) ([]GetEventsRow, error) {
+	rows, err := q.db.QueryContext(ctx, getEvents, liturgyID)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []GetEventsRow
+	for rows.Next() {
+		var i GetEventsRow
+		if err := rows.Scan(&i.ID, &i.EventName); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
