# backend/internal/models/liturgy.sql.go
@@ -1,0 +1,44 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.29.0
+// source: liturgy.sql
+
+package db
+
+import (
+	"context"
+)
+
+const getLiturgies = `-- name: GetLiturgies :many
+SELECT
+    id, liturgy_name
+FROM deacons.deacons.liturgies
+`
+
+type GetLiturgiesRow struct {
+	ID          int32
+	LiturgyName string
+}
+
+func (q *Queries) GetLiturgies(ctx context.Context) ([]GetLiturgiesRow, error) {
+	rows, err := q.db.QueryContext(ctx, getLiturgies)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []GetLiturgiesRow
+	for rows.Next() {
+		var i GetLiturgiesRow
+		if err := rows.Scan(&i.ID, &i.LiturgyName); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
