# backend/internal/routes/routes.go
@@ -8,9 +8,11 @@ import (
 )
 
 type Handler struct {
-	User   *handlers.UserHandler
-	Deacon *handlers.DeaconHandler
-	Skill  *handlers.SkillHandler
+	User    *handlers.UserHandler
+	Deacon  *handlers.DeaconHandler
+	Skill   *handlers.SkillHandler
+	Events  *handlers.EventsHandler
+	Liturgy *handlers.LiturgyHandler
 }
 
 func (handler *Handler) Setup(router *gin.Engine) {
@@ -35,6 +37,17 @@ func (handler *Handler) Setup(router *gin.Engine) {
 	skills := router.Group("/skills", middleware.AuthMiddleware(), middleware.AllowedRoles([]string{consts.SuperAdmin, consts.Admin}))
 	{
 		skills.GET("/", handler.Skill.GetSkills)
+		skills.GET("/:liturgy_id/:event_id", handler.Skill.GetDependantSkills)
+	}
+
+	events := router.Group("/events", middleware.AuthMiddleware(), middleware.AllowedRoles([]string{consts.SuperAdmin, consts.Admin}))
+	{
+		events.GET("/:liturgy_id", handler.Events.GetEvents)
+	}
+
+	liturgy := router.Group("/liturgy", middleware.AuthMiddleware(), middleware.AllowedRoles([]string{consts.SuperAdmin, consts.Admin}))
+	{
+		liturgy.GET("/", handler.Liturgy.GetLiturgies)
 	}
 
 }
@@ -43,4 +56,6 @@ func (handler *Handler) registerHandler() {
 	handler.User = handlers.NewUserHandler()
 	handler.Deacon = handlers.NewDeaconHandler()
 	handler.Skill = handlers.NewSkillHandler()
+	handler.Events = handlers.NewEventsHandler()
+	handler.Liturgy = handlers.NewLiturgyHandler()
 }
